DRU-256: Fix actions menu icon visibility

--- a/scss/civicrm/common/_base.scss
+++ b/scss/civicrm/common/_base.scss
@@ -125,7 +125,9 @@
     &::after {
       @include fa-icon($font-size-base, $fa-var-ellipsis-v, $gray-darker);
       background: none;
+      position: absolute;
       right: -2px;
+      text-align: center;
       text-indent: 0;
       top: 0;
       width: 5px;
